small size problem

--- a/index.html
+++ b/index.html
@@ -3,90 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Color Box2 Game</title>
-  <style>
-    body {
-      font-family: 'Roboto', Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background: linear-gradient(135deg, #f0f8ff, #add8e6);
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      justify-content: center;
-    }
-
-    h1 {
-      color: #333;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-      margin-bottom: 20px;
-    }
-
-    #game-container {
-      display: flex;
-      gap: 20px;
-      padding: 10px;
-    }
-
-    .box {
-      width: 120px;
-      height: 300px;
-      background-color: #fff;
-      border: 2px solid #ddd;
-      border-radius: 12px;
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-      display: flex;
-      flex-direction: column-reverse;
-      padding: 10px;
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-    }
-
-    .box:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    .block {
-      width: 100%;
-      height: 50px;
-      border-radius: 8px;
-      margin-bottom: 5px;
-      cursor: pointer;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .block:hover {
-      transform: scale(1.1);
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .selected {
-      outline: 4px solid #ff9800;
-      box-shadow: 0 0 10px 4px rgba(255, 152, 0, 0.6);
-    }
-
-    .orange {
-      background: linear-gradient(135deg, #ffa726, #fb8c00);
-    }
-
-    .green {
-      background: linear-gradient(135deg, #66bb6a, #388e3c);
-    }
-
-    .blue {
-      background: linear-gradient(135deg, #42a5f5, #1e88e5);
-    }
-
-    #message {
-      margin-top: 20px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #444;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-    }
-  </style>
+  <title>Color Box Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Color Box Game</h1>
@@ -98,139 +16,7 @@
     <div class="box" id="box-5"></div>
   </div>
   <div id="message"></div>
-
-  <script>
-    const rows = 5; // Kutu sayısı
-    const colors = ['orange', 'green', 'blue']; // Kullanılacak renkler
-    const boxes = []; // Kutu dizisi (2D)
-    let selectedBlock = null; // Seçilen blok
-
-    // Fisher-Yates algoritmasıyla karıştırma
-    function shuffle(array) {
-      for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-      }
-      return array;
-    }
-
-    // Her kutuda üst üste üç aynı rengin olup olmadığını kontrol eden fonksiyon
-    function isValidDistribution() {
-      for (let i = 0; i < rows; i++) {
-        const box = boxes[i];
-        for (let j = 2; j < box.length; j++) {
-          if (box[j] === box[j - 1] && box[j - 1] === box[j - 2]) {
-            return false;
-          }
-        }
-      }
-      return true;
-    }
-
-    // Oyunu başlatan fonksiyon (dağıtım sırasında geçerli dağılım elde edilene kadar tekrarlanır)
-    function initializeGame() {
-      let blocks;
-      // Toplam 18 blok (her renkten 6 tane)
-      const createBlocks = () => colors.flatMap(color => Array(6).fill(color));
-
-      do {
-        blocks = createBlocks();
-        shuffle(blocks);
-        // Kutuları temizle
-        for (let i = 0; i < rows; i++) {
-          boxes[i] = [];
-        }
-        // Karıştırılmış blokları sırayla kutulara yerleştiriyoruz
-        blocks.forEach((block, index) => {
-          boxes[index % rows].push(block);
-        });
-      } while (!isValidDistribution());
-
-      updateBoxes();
-    }
-
-    function updateBoxes() {
-      const boxElements = document.querySelectorAll('.box');
-      boxElements.forEach((boxElement, boxIndex) => {
-        boxElement.innerHTML = '';
-        boxes[boxIndex].forEach(blockColor => {
-          const blockElement = document.createElement('div');
-          blockElement.classList.add('block', blockColor);
-          boxElement.appendChild(blockElement);
-        });
-      });
-
-      document.querySelectorAll('.block').forEach(block => block.classList.remove('selected'));
-      if (selectedBlock) {
-        const boxElement = document.querySelectorAll('.box')[selectedBlock.box];
-        const blockElements = boxElement.querySelectorAll('.block');
-        const topBlock = blockElements[blockElements.length - 1];
-        if (topBlock) {
-          topBlock.classList.add('selected');
-        }
-      }
-
-      // Kazanma koşulunu kontrol et
-      checkWinCondition();
-    }
-
-    document.querySelectorAll('.box').forEach((box, boxIndex) => {
-      box.addEventListener('click', () => {
-        // Seçili blok varsa, seçim iptal edilsin
-        if (selectedBlock && selectedBlock.box === boxIndex) {
-          selectedBlock = null;
-          updateBoxes();
-          return;
-        }
-
-        // Yeni kutuya taşımak için seçilen blok varsa, kutu dolu olmasın
-        if (selectedBlock) {
-          if (selectedBlock.box !== boxIndex && boxes[boxIndex].length < 6) {
-            const movedBlock = boxes[selectedBlock.box].pop();
-            boxes[boxIndex].push(movedBlock);
-            selectedBlock = null;
-            checkForExplosions();
-            updateBoxes();
-          }
-        } else {
-          if (boxes[boxIndex].length > 0) {
-            selectedBlock = {
-              color: boxes[boxIndex][boxes[boxIndex].length - 1],
-              box: boxIndex
-            };
-            updateBoxes();
-          }
-        }
-      });
-    });
-
-    function checkForExplosions() {
-      boxes.forEach((box, boxIndex) => {
-        const boxStack = boxes[boxIndex];
-        for (let i = boxStack.length - 1; i >= 2; i--) {
-          const group = boxStack.slice(i - 2, i + 1);
-          if (group.every(color => color === group[0])) {
-            boxStack.splice(i - 2, 3);
-            i -= 2;
-          }
-        }
-      });
-      updateBoxes();
-    }
-
-    function checkWinCondition() {
-      const isWin = boxes.every(box => box.length === 0);
-      const messageElement = document.getElementById('message');
-      if (isWin) {
-        messageElement.innerText = 'Tebrikler, kazandınız!';
-        messageElement.style.color = '#2e7d32'; // Yeşil başarı mesajı
-      } else {
-        messageElement.innerText = ''; // Kazanmadıysa mesajı temizle
-      }
-    }
-
-    initializeGame();
-  </script>
-  <script src="responsive.js" defer></script>
+  <script src="responsive.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
